<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="319dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="303dp"
                android:layout_height="50dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="320dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/etEmailLayout"
            app:layout_constraintTop_toBottomOf="@+id/etEmailLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="303dp"
                android:layout_height="50dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="394dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23dp"
            android:fontFamily="@font/livvic_bold"
            android:text="@string/title"
            android:textColor="@color/sageC"
            android:textSize="55sp"
            app:layout_constraintBottom_toTopOf="@+id/etEmailLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="54dp"
            android:background="@drawable/button_style"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="59dp"
            android:layout_marginBottom="53dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:indicatorColor="@color/sageC"
            app:layout_constraintBottom_toBottomOf="@+id/etEmailLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>