<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutEditProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:id="@+id/linProfileImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="52dp"
            tools:srcCompat="@drawable/ic_baseline_supervised_user_circle_24" />

        <TextView
            android:id="@+id/txtEditProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Profile Picture"
            android:textColor="@color/sage"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="172dp" />

    </LinearLayout>


    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="19dp"
        android:background="@color/underline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linProfileImage" />

    <LinearLayout
        android:id="@+id/lineInfoProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1">

        <TextView
            android:id="@+id/lblInfoProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Info Profile"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="231dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_style"
                    android:hint="@string/name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_style"
                    android:hint="@string/email"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPhoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/txtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_style"
                    android:hint="@string/phone"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etAddressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:background="@drawable/edittext_style"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/underline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineInfoProfile" />

    <LinearLayout
        android:id="@+id/lineInfoSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <Button
            android:id="@+id/btnSave"
            android:theme="@style/Theme.OptiKoeCapstone"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_style"
            android:text="Save"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:indicatorColor="@color/sageC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />


</androidx.constraintlayout.widget.ConstraintLayout>