<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:id="@+id/layoutProfile"
    tools:context=".ProfileActivity">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="19dp"
        android:indeterminate="true"
        android:visibility="visible"
        app:indicatorColor="@color/sageC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewAddress" />

    <LinearLayout
        android:id="@+id/linearProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="2dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    tools:layout_editor_absoluteX="73dp"
                    tools:layout_editor_absoluteY="145dp"
                    tools:srcCompat="@drawable/ic_baseline_supervised_user_circle_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/livvic_bold"
                    android:text="@string/name"
                    android:textColor="@color/sageC"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/livvic"
                    android:text="@string/phone"
                    android:textColor="@color/sageC"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/livvic"
                    android:text="@string/email"
                    android:textColor="@color/sageC"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/imgSetting"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_baseline_settings_24"
                    tools:layout_editor_absoluteX="145dp"
                    tools:layout_editor_absoluteY="52dp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearProfile">

        <LinearLayout
            android:id="@+id/linearAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="100"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/livvic"
                    android:text="Address"
                    android:textColor="#000000"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtNameAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/livvic"
                    android:text="@string/name"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPhoneAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/livvic"
                    android:text="@string/phone"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/livvic"
                    android:text="@string/addressDummy"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_style"
        android:text="Log Out"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>